# shape-of-dreams-build-planner

./: .gitignore  LICENSE  README.md  app.py  build_exe.py  pyproject.toml  view_builds.py
analysis/: __init__.py  build_analyzer.py  build_comparator.py  data_loader.py  paths.py  synergies.py  synergy_analyzer.py  validators.py
builds/: aurena_builds.json  bismuth_builds.json  general_builds.json  index.json  lacerta_builds.json  mist_builds.json  nachia_builds.json  shell_builds.json  vesper_builds.json  yubar_builds.json
data/: astrology_tree.json  characters.json  constellation_powers.json  essences.json  memories.json
gui/: __init__.py  app.py  theme.py
gui/tabs/: builds_tab.py  compare_tab.py  create_tab.py  essences_tab.py  memories_tab.py  meta_tab.py  synergy_tab.py
gui/widgets/: build_card.py  memory_slot.py  rarity_label.py  score_bar.py  search_bar.py
tests/: test_analyzers.py  test_custom_builds.py  test_data_loader.py  test_synergies.py  test_validators.py
