[project]
name = "arpgbuilds"
version = "1.0.0"
description = "Shape of Dreams ARPG Build Analyzer - Desktop Application"
requires-python = ">=3.9"
dependencies = [
    "ttkbootstrap>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
arpgbuilds = "app:run"
